All changes are regarding CSS stylings. Mainly fixed spacing of flex boxes

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -12,26 +12,19 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-content: center;
     padding: 0 2em 0 2em;
-    border: greenyellow 2px solid;
 
     .box {
+      max-width: 45em;
       text-align: center;
-      margin-bottom: 3em;
-      flex-basis: 100%;
+      margin-bottom: 2em;
+      margin-right: 1em;
 
-      @media screen and (min-width: 950px) {
-        flex-basis: 40%;
-        border:blue 2px solid;
-      }
-
-      @media screen and (min-width: 1300px) {
-        flex-basis: 30%;
-      }
-
-      @media screen and (min-width: 1850px) {
-        flex-basis: 20%;
+      @media screen and (min-width: 1400px) {
+        max-width: 20em;
+        margin-right: 2em;
       }
 
       .mini-resource {
@@ -39,28 +32,67 @@ body {
         width: auto;
         border-radius: 1em;
         overflow:hidden;
+
+        .resource-thumbnail {
+          width: 100%;
+        }
       }
 
       .text {
         h3 {
-          font-size: 1.5em;
+          font-size: 1.45em;
           margin: .75em 0 .75em 0;
-          border: rgb(179, 0, 255) 2px solid;
+          line-height: 1.2em;
+          text-transform: uppercase;
+          border: #000000 2px solid;
+          border-radius: 2em;
+          background: #000000;
+          color:#FFFF;
         }
 
         p {
           min-height: 4em;
+          font-size: 1.25em;
           text-align: left;
-          border: rgb(255, 0, 111) 2px solid;
+
         }
       }
 
       .buttons {
-        border: rgb(255, 234, 0) 2px solid;
+        .search-cat {
+          text-align: center;
+          padding: .25em 0 .25em 0;
+          font-size: 1em;
+          font-weight: 700;
+          text-transform: uppercase;
+          margin-bottom: .5em;
+          background: #000000;
+          border: #000000 2px solid;
+          border-radius: 2em;
 
-        a {
-          flex-direction: column;
+          a {
+            text-decoration: none;
+            color: #FFF;
+          }
         }
+
+        .read-more {
+          text-align: center;
+          padding: .25em 0 .25em 0;
+          font-size: 1em;
+          font-weight: 700;
+          text-transform: uppercase;
+          background: #000000;
+          border: #000000 2px solid;
+          border-radius: 2em;
+
+          a {
+            text-decoration: none;
+            color: #FFF;
+          }
+        }
+
+
       }
     }
   }
